--- a/Week 10 Body/ML5/Hand/hand.html
+++ b/Week 10 Body/ML5/Hand/hand.html
@@ -31,14 +31,12 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/102/three.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.js"></script>
-<script src="https://unpkg.com/ml5@0.20.0-alpha.3/dist/ml5.js"></script>
+<!-- <script src="https://unpkg.com/ml5@0.20.0-alpha.3/dist/ml5.js"></script> -->
+<script src="https://unpkg.com/ml5@1/dist/ml5.min.js"></script>
 
 
 <body>
     <div id='container'></div>
-    <div>
-        Text: <input type="text" value='Hi There' id="text">
-    </div>
     <!--<script src="p5LiveMediaStuff.js"></script>-->
     <script src="hand.js"> </script>
 
